# EmurgoHaskellProject

./: CHANGELOG.md  EmurgoHaskellProject.cabal  README.md
app/: CardPrinting.hs  Game.hs  Main.hs  Types.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: EmurgoHaskellProject-0.1.0.0-inplace-Lib.conf  EmurgoHaskellProject-0.1.0.0-inplace.conf  package.cache
