cabal-version:      2.4
name:               EmurgoHaskellProject
version:            0.1.0.0
description:        Mini project for Emurgo Cardano Associate Development Program
license:            MIT
author:             SIDANWhatever
maintainer:         wongkahinhinson@gmail.com

extra-source-files: CHANGELOG.md

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances

library
    import: lang
    hs-source-dirs: app
    exposed-modules: Game, Main, Types
    build-depends: base ^>=4.14.3.0,
                   random

-- executable EmurgoHaskellProject
--     main-is:          Main.hs
--     -- import: li

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     -- build-depends:    library
--     hs-source-dirs:   app
--     default-language: Haskell2010
