cabal-version:      2.4
name:               EmurgoHaskellProject
version:            0.1.0.0
description:        Mini project for Emurgo Cardano Associate Development Program
license:            MIT
author:             SIDANWhatever
maintainer:         wongkahinhinson@gmail.com

extra-source-files: CHANGELOG.md

common common
    build-depends:    base ^>=4.14.3.0
                    , random
    default-language: Haskell2010
    ghc-options:      -Wall -Wnoncanonical-monad-instances

library Lib
    import:          common
    hs-source-dirs:  app
    exposed-modules: Game
                   , CardPrinting
                   , Types
    build-depends:   base
                   , random

executable EmurgoHaskellProject
    import:         common
    hs-source-dirs: app
    main-is:        Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:  Game
                  , Types
                  , CardPrinting
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  Lib
    hs-source-dirs: app